--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,11 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.input-field {
+  width: 300px;
+  padding: 10px;
+  font-size: 16px;
+  border: 1px solid rgb(150, 150, 150);
+  border-radius: 3px;
+}
